# whisper-finetune

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
artifacts/: MODEL_CARD_TEMPLATE.md
configs/: whisper_small_hi.yaml
docs/: architecture.md
notebooks/: whisper_hi_colab.ipynb
scripts/: _bootstrap.py  make_model_card.py  plot_results.py  prepare_data.py  run_eval.py  run_train.py  transcribe.py
src/whisper_hi/: __init__.py  collator.py  config.py  data.py  evaluate.py  inference.py  metrics.py  model.py  train.py
tests/: test_smoke.py
